// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultHeader renders as expected with children 1`] = `
<Text
  accessibilityRole="header"
  style={
    Array [
      Object {
        "color": "black",
      },
      Object {
        "fontSize": 34,
        "fontWeight": "300",
        "lineHeight": 51,
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`DefaultHeader renders as expected without children 1`] = `
<Text
  accessibilityRole="header"
  style={
    Array [
      Object {
        "color": "black",
      },
      Object {
        "fontSize": 34,
        "fontWeight": "300",
        "lineHeight": 51,
      },
      undefined,
    ]
  }
/>
`;
